--- a/Views/Customer/Customer_List_Custom.cshtml
+++ b/Views/Customer/Customer_List_Custom.cshtml
@@ -50,7 +50,7 @@
                         @*<a class="btn btn-sm btn-success bold" href="#">
                                 Enable
                             </a>*@
-                        <a class="btn btn-sm btn-danger bold" href="" onclick="delete_customer(@v.Id)">
+                        <a class="btn btn-sm btn-danger bold" href="#" onclick="delete_customer(@v.Id)">
                             Delete
                         </a>
                     </td>
