--- a/Views/Shared/Customer_Summary.cshtml
+++ b/Views/Shared/Customer_Summary.cshtml
@@ -121,6 +121,7 @@
                         <th class="text-center">Description</th>
                         <th class="text-center">Quantity</th>
                         <th class="text-center">Item Price</th>
+                        <th class="text-center">VAT</th>
                         <th class="text-center">VAT+Item Price</th>
 
 
