--- a/Content/css/bootstrap.css
+++ b/Content/css/bootstrap.css
@@ -2854,16 +2854,26 @@ fieldset[disabled] .btn-default.active {
   background-color: #337ab7;
   border-color: #2e6da4;
 }
-.btn-primary:hover,
-.btn-primary:focus,
-.btn-primary.focus,
-.btn-primary:active,
-.btn-primary.active,
-.open > .dropdown-toggle.btn-primary {
-  color: #fff;
+    .btn-primary:hover,
+    .btn-primary:focus,
+    .btn-primary.focus,
+    .btn-primary:active,
+    .btn-primary.active,
+    .open > .dropdown-toggle.btn-primary {
+        border-color: #122763;
+        text-shadow: #181c7b 0 1px 0;
+        background: #001401;
+        background: -webkit-gradient(linear, left top, left bottom, from(#286090), to(#001401));
+        background: -webkit-linear-gradient(top, #24557f, #07194c);
+        background: -moz-linear-gradient(top, #286090, #001401);
+        background: -ms-linear-gradient(top, #286090, #001401);
+        background: -o-linear-gradient(top, #286090, #001401);
+        background-image: -ms-linear-gradient(top, #286090 0%, #001401 100%);
+        color: #ffffff;
+        /*color: #fff;
   background-color: #286090;
-  border-color: #204d74;
-}
+  border-color: #204d74;*/
+    }
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
@@ -2905,9 +2915,19 @@ fieldset[disabled] .btn-primary.active {
 .btn-success:active,
 .btn-success.active,
 .open > .dropdown-toggle.btn-success {
-  color: #fff;
-  background-color: #449d44;
   border-color: #398439;
+  text-shadow: #00481a 0 1px 0;
+  background: #001401;
+  background: -webkit-gradient(linear, left top, left bottom, from(#00a748), to(#001401));
+  background: -webkit-linear-gradient(top, #00a748, #223a24);
+  background: -moz-linear-gradient(top, #00a748, #001401);
+  background: -ms-linear-gradient(top, #00a748, #001401);
+  background: -o-linear-gradient(top, #00a748, #001401);
+  background-image: -ms-linear-gradient(top, #00a748 0%, #001401 100%);
+  color: #ffffff;
+
+   /*color: #fff;
+  background-color: #449d44;*/
 }
 .btn-success:active,
 .btn-success.active,
