--- a/Views/Config/TESTING.cshtml
+++ b/Views/Config/TESTING.cshtml
@@ -23,40 +23,21 @@
                 <div class="right_side_custom_style">
                     <div class="bggg-img">
 
-                        <!-- Button trigger modal -->
-                        <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#changeTime">Show Modal</button>
-                        <!-- Modal -->
-                        <div class="modal fade" id="changeTime" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                        <h4 class="modal-title" id="myModalLabel">Change time</h4>
-                                    </div>
-                                    <div class="modal-body">
-                                        <form>
-                                            <table>
-                                                <tr>
-                                                    <td class="description">
-                                                        <span class="descriptionText1">description</span>
-                                                    </td>
-                                                    <td style="width:50px;">
-                                                        <span class="timer pull-right btn btn-primary">10 seconds</span>
-                                                    </td>
-                                                </tr>
-                                            </table>
-                                        </form>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary">Save changes</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        @*<a href="#" onclick="postcode_testing()">POSTCODE</a>*@
+                        <a href="#" data-target="#Postcode_Confirmation" data-toggle="modal">MODAL</a>
 
 
-                    </div>
+                        @*----------------------------POP UP FOR SOLD HISTORY--------------------------------*@
+
+                        
+                        @*----------------------------POP UP END SOLD HISTORY--------------------------------*@
+
+
+                            <!-- Modal -->
+
+
+
+</div>
                 </div>
                 @*-----------------Main Container Start---------------*@
                 @*-----------------Main Container Start---------------*@
@@ -74,6 +55,40 @@
             Html.RenderPartial("Footer_View");
         }
     </footer>
+
+
+    <script>
+        function postcode_testing() {
+
+            //Get Postcode
+            //var number = $('#number').val("0l12odr");
+            var postcode = "SY10";
+
+            //Get latitude & longitude
+            $.getJSON('http://maps.googleapis.com/maps/api/geocode/json?address=' + postcode + '&sensor=false', function (data) {
+                //alert("postcode" + postcode)
+                var lat = data.results[0].geometry.location.lat;
+                var lng = data.results[0].geometry.location.lng;
+                //alert("lat  " + lat);
+                //alert("lng  " + lng);
+
+                //Get address    
+                $.getJSON('http://maps.googleapis.com/maps/api/geocode/json?latlng=' + lat + ',' + lng + '&sensor=false', function (data) {
+                    
+                    var address = data.results[0].address_components;
+                    var street = address[1].long_name;
+                    var town = address[2].long_name;
+                    var county = address[3].long_name;
+
+                    //alert(address);
+
+                    //Insert
+                    alert("street  " + street + ', ' + "   town   " + town + ', ' +  "    county  " + county + ', ' +  "    postcode  " + postcode);
+
+                });
+            });
+        }
+    </script>
 
 
     <script>
