--- a/Views/Sale/New_Invoice.cshtml
+++ b/Views/Sale/New_Invoice.cshtml
@@ -98,7 +98,7 @@
                                                         <span class="bold">Existing Customer</span>
                                                     </a>
                                                 </div>
-
+                                                
 
                                                 <div class="clearfix"></div>
 
@@ -351,6 +351,12 @@
                                                     </td>
                                                 </tr>
 
+                                                <tr class="">
+                                                    <td class="bold"></td>
+                                                    <td class=" bold text-center"><a href="#" data-target="#Give_Refund" data-toggle="modal">Give Refund</a></td>
+                                                </tr>
+
+
                                                 <tr class="partial_paid" id="partial_paid_tr" style="display:none">
                                                     <td class="bold">Partial Payment</td>
                                                     <td id="partial_paid_td" class="text-right">£0</td>
@@ -370,6 +376,8 @@
                                                     <td class="bold width-134">Custom Date</td>
                                                     <td><input type="date" class="width-180" /></td>
                                                 </tr>
+
+
 
                                                 <tr>
                                                     <td class="bold text-center"><a href="#" data-target="#Deposit_Modal" class="hideDiv" id="Deposit_payment_option" data-toggle="modal">Deposit Payment</a></td>
@@ -497,6 +505,75 @@
             Html.RenderPartial("Footer_View");
         }
     </footer>
+    @*-------------------------------POP UP FOR REFUND----------------------------------*@
+
+    <div class="modal fade" id="Give_Refund" tabindex="-1" role="dialog" aria-hidden="false">
+        <div class="modal-dialog modal-md">
+            <div class="modal-content modal-style-custom">
+
+                <div class="title col-md-12">
+                    <span>Message</span>
+                    <img src="~/img/images/c3.png" class="close mr--13 pull-right" data-dismiss="modal" />
+                </div>
+
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                    <div class="x_panel">
+
+                        <div class="empty-height"></div><div class="empty-height"></div>
+
+                        <div class="win text-center">
+                            <h3 class="color"><b>Refund an item</b></h3>
+
+                            <div class="empty-height"></div><div class="empty-height"></div>
+
+                            <table class="table table-responsive border_black" id="customer_list_table">
+                                <thead>
+                                    <tr class="table-heading-fonts table-main-headings">
+                                        <th class="text-center"></th>
+                                        <th class="text-center">SKU</th>
+                                        <th class="text-center">Title</th>
+                                        <th class="text-center">QTY</th>
+                                    </tr>
+                                </thead>
+
+                                <tbody class="black-color bold" id="updated_customer_list">
+
+                                   
+                                        <tr>
+                                            <td class="text-center border-right-td"><div class="text-center"><input placeholder="0" class="unbold width-45 text-center font-18" name="" type="checkbox"></div></td>
+                                            <td class="text-center border-right-td"><div class="text-center"><input onkeypress="validate(event)" placeholder="Sku" class="unbold width-45 text-center" name="" type="text"></div></td>
+                                            <td class="border-right-td">
+                                                <textarea class="description-text-area unbold width-100p text-center" name="" id="" required="" placeholder=""></textarea>
+                                            </td>
+
+                                            <td class="text-center"><div class="text-center"><input onkeypress="validate(event)" placeholder="0" class="unbold width-45 text-center" name="" type="text"></div></td>
+                                        
+                                        </tr>
+
+                                </tbody>
+
+
+                            </table>
+
+                            <div class="col-md-12">
+
+                                <div class="clearfix"></div>
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="modal-footer"></div>
+                <div class=""></div>
+
+            </div>
+        </div>
+    </div>
+
+    @*-------------------------------POP UP FOR REFUND----------------------------------*@
+
 
     @*----------------------------POP UP FOR IMAGE CLICK--------------------------------*@
 
