--- a/Content/css/media.css
+++ b/Content/css/media.css
@@ -34,6 +34,19 @@
 }
 }
 
+
+@media screen and (min-height: 768px) and (max-height: 1050px) {
+
+    .modal-style-custom {
+    background: linear-gradient(to bottom, #fafafd, #b2b2b3);
+    border: 3px solid #00aeee;
+    max-height: 860px;
+    overflow-y: auto;
+    overflow-x: no-display;
+}
+}
+
+
 @media screen and (min-width: 481px) and (max-width: 767px) {
 }
 
