--- a/Views/Supplier/List.cshtml
+++ b/Views/Supplier/List.cshtml
@@ -632,7 +632,7 @@
                                 
                                 <label>Please Enter House Number</label>
 
-                                <input type="text" id="house_number_postcode_add" value="454564"/>
+                                <input type="text" id="house_number_postcode_add"/>
 
                             </div>
 
