--- a/Views/Customer/Customer_List_Custom.cshtml
+++ b/Views/Customer/Customer_List_Custom.cshtml
@@ -31,7 +31,7 @@
                     <td class="text-center">@v.Company.Company_Name</td>
                     <td class="text-center" data-title="First Name">@v.phone</td>
                     <td class="text-center" data-title="Last Name">@v.Email</td>
-                    <td data-title="Email" class="user-emails text-center">@v.Billing_Address</td>
+                    <td data-title="Email" class="user-emails text-center">@v.Billing_Street</td>
 
 
                     @*@if (@v.Is_Active == 1)
