--- a/Views/Customer/UpdatedCustomerList.cshtml
+++ b/Views/Customer/UpdatedCustomerList.cshtml
@@ -7,7 +7,7 @@
         <td class="text-center">@v.Name</td>
         <td class="text-center">@v.phone</td>
         <td class="text-center">@v.Email</td>
-        <td class="text-center">@v.Billing_Address</td>
+        <td class="text-center">@v.Billing_Street</td>
         <td class="text-center">@v.Billing_Postcode</td>
 
         @*@if (@v.Is_Active == 1)
