--- a/Views/Purchase/New_Purchase_Order.cshtml
+++ b/Views/Purchase/New_Purchase_Order.cshtml
@@ -665,7 +665,7 @@
                                         {
                                             <tr onclick="existing_supplier_click(@v.Id)">
                                                 <td id="@String.Concat("suppliers1", v.Id)" data-title="User ID">@v.Name</td>
-                                                <td id="@String.Concat("suppliers2", v.Id)" data-title="Last Name">@v.Address</td>
+                                                <td id="@String.Concat("suppliers2", v.Id)" data-title="Last Name">@v.Street</td>
                                                 <td id="@String.Concat("suppliers3", v.Id)" data-title="Last Name">@v.Post_Code</td>
                                                 <td id="@String.Concat("suppliers4", v.Id)" data-title="First Name">@v.Email</td>
                                                 <td id="@String.Concat("suppliers5", v.Id)" data-title="Email" class="user-emails">@v.Mobile</td>
