--- a/Views/Report/CreditSaleReport.cshtml
+++ b/Views/Report/CreditSaleReport.cshtml
@@ -68,7 +68,7 @@
                                                 <option>Select Any</option>
                                                 <option value="-1">All Type of Customers</option>
 
-                                                @foreach (var obj in ViewBag.customersType)
+                                                @foreach (var obj in ViewBag.Customer_Type)
                                                 {
                                                     <option value="@obj.Id">@obj.Type </option>
                                                 }
