--- a/Views/Report/Data_Report_Partial_View.cshtml
+++ b/Views/Report/Data_Report_Partial_View.cshtml
@@ -8,7 +8,7 @@
         <td class="Transaction_no_tr" data-title="User ID">@v.Invoice.Invoice_Number</td>
         <td class="Trans_type_tr" data-title="User ID">@v.Invoice.Document_Type.Type</td>
         <td class="Name_tr" data-title="User ID">@v.Invoice.Customer.Name</td>
-        <td class="Address_tr" data-title="User ID">@v.Invoice.Customer.Billing_Address</td>
+        <td class="Address_tr" data-title="User ID">@v.Invoice.Customer.Billing_Street</td>
         <td class="Phone_tr" data-title="User ID">@v.Invoice.Customer.phone</td>
         @*<td class="Email_tr" data-title="User ID">@v.Invoice.Customer.Email</td>*@
         <td class="SKU_tr" data-title="User ID">@v.Sale.Product.Custom_Label_</td>
