--- a/Views/Shared/Edit_Customer_Modal.cshtml
+++ b/Views/Shared/Edit_Customer_Modal.cshtml
@@ -20,15 +20,13 @@
                 </div>
             </div>
 
-            <div class="modal-footer">
-
-
-            </div>
+            <div class="modal-footer"></div>
 
 
 
         </div>
     </div>
 </div>
+
 
 @*----------------------------POP UP END EDIT CUSTOMER--------------------------------*@
