--- a/Views/Customer/Edit_Customers.cshtml
+++ b/Views/Customer/Edit_Customers.cshtml
@@ -1,7 +1,7 @@
 ﻿@model eSalesPro.Models.Customer
 <!---->
 <div class="win text-center" id="edit_customers">
-    <h3 class="black-color"><b>Edit Customer</b></h3>
+    <h3 class="black-color"><b>Edit Customers</b></h3>
     <img class="pull-right margin-supplier ml-22" src="~/img/images/customer.png" onclick="close_modal()"/>
 
     <form id="demo-form2" action="@Url.Action("Edit", "Customer", new {id=@Model.Id })" method="post" data-parsley-validate class="form-horizontal form-label-left" enctype="multipart/form-data">
@@ -65,7 +65,7 @@
                 <div class="form-group">
                     <label class="customer-create-texts" for="middle-name">Account No<span class="required">*</span></label>
                     <div class="col-md-3 col-sm-6 col-xs-12">
-                        <input type="text" name="account_no" value="@Model.Billing_Address" required>
+                        <input type="text" name="account_no" value="@Model.Account_No" required>
                     </div>
                 </div>
 
@@ -119,19 +119,19 @@
                 <div class="form-group">
                     <label class="customer-create-texts width-178" for="middle-name">Address<span class="required">*</span></label>
                     <div class="col-md-3 col-sm-6 col-xs-12">
-                        <input class="ml--50" type="text" name="address1" value="@Model.Billing_Address" required>
-                        <input class="ml--50" type="text" name="address2">
-                        <input class="ml--50" type="text" name="address3">
-                        <input class="ml--50" type="text" name="address4">
-                        <input class="ml--50" type="text" name="address5">
+                        <input class="ml--50" type="text" name="billing_street" id="edit_customer_street_postcode" value="@Model.Billing_Street" required>
+                        <input class="ml--50" type="text" name="billing_town" id="edit_customer_town_postcode" value="@Model.Billing_Town">
+                        <input class="ml--50" type="text" name="billing_county" id="edit_customer_county_postcode" value="@Model.Billing_County">
+                        <input class="ml--50" type="text" name="billing_country" id="edit_customer_country_postcode" value="@Model.Billing_Country">
+                        @*<input class="ml--50" type="text" name="address5">*@
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label class="customer-create-texts width-178" for="middle-name">Postcode<span class="required">*</span></label>
                     <div class="col-md-3 col-sm-6 col-xs-12">
-                        <input class="ml--50" type="text" name="billing_postcode" value="@Model.Billing_Postcode">
-                        <a href="#"><img src="~/img/images/ssearch.png" id="input_img" /></a>
+                        <input class="ml--50" type="text" name="billing_postcode" id="postcode_edit" value="@Model.Billing_Postcode" onkeypress="Postcode_Enter_Click_Edit(event)">
+                        <a href="#" onclick="postcode_testing_edit()"><img src="~/img/images/ssearch.png" id="input_img" /></a>
                     </div>
                 </div>
 
@@ -152,11 +152,10 @@
                     <div class="form-group">
                         <label class="customer-create-texts width-178" for="middle-name">Shipping Address<span class="required">*</span></label>
                         <div class="col-md-3 col-sm-6 col-xs-12">
-                            <input class="ml--50" type="text" name="shipping_address" value="@Model.Shipping_Address" required>
-                            <input class="ml--50" type="text" name="address2">
-                            <input class="ml--50" type="text" name="address3">
-                            <input class="ml--50" type="text" name="address4">
-                            <input class="ml--50" type="text" name="address5">
+                            <input class="ml--50" type="text" name="shipping_street" id="shipping_street_edit" required value="@Model.Shipping_Street">
+                            <input class="ml--50" type="text" name="shipping_town" id="shipping_town_edit" value="@Model.Shipping_Town">
+                            <input class="ml--50" type="text" name="shipping_county" id="shipping_county_edit" value="@Model.Shipping_County">
+                            <input class="ml--50" type="text" name="shipping_country" id="shipping_country_edit" value="@Model.Billing_Country">
                         </div>
                     </div>
 
@@ -166,7 +165,7 @@
                     <div class="form-group">
                         <label class="customer-create-texts width-178" for="middle-name">Postcode<span class="required">*</span></label>
                         <div class="col-md-3 col-sm-6 col-xs-12">
-                            <input class="ml--50" type="text" name="shipping_postcode" value="@Model.Shipping_Postcode">
+                            <input class="ml--50" type="text" name="shipping_postcode" id="shipping_postcode_edit" value="@Model.Shipping_Postcode">
                             <a href="#"><img src="~/img/images/ssearch.png" id="input_img" /></a>
                         </div>
                     </div>
@@ -228,3 +227,170 @@
     </form>
 
 </div>
+
+
+
+
+
+@*----------------------------POP UP for EDIT CUSTOMER POSTCODE CONFIRMATION--------------------------------*@
+
+<div style="z-index:9999" class="modal fade" id="Postcode_Confirmation_Edit" tabindex="-1" role="dialog" aria-hidden="false">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content modal-style-custom">
+
+            <div class="title col-md-12">
+                <span>Confirm</span>
+                <img src="~/img/images/c3.png" class="close mr--13 pull-right" onclick="close_customer_postcode()"/>
+            </div>
+
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="x_panel">
+
+                    <div id="" class="black-color">
+                        <div class="empty-height"></div><div class="empty-height"></div>
+                        <div class="text-center"><p class="color"><b>Please confirm below address <br />If correct, press ok</b></p></div>
+
+                        <div class="empty-height"></div><div class="empty-height"></div>
+
+                        <div class="text-center italic">
+                            <label id="street_postcode_edit_customer"></label><br />
+                        </div>
+                        <div class="text-center italic">
+                            <label id="town_postcode_edit_customer"></label><br />
+                        </div>
+                        <div class="text-center italic">
+                            <label id="county_postcode_edit_customer"></label><br />
+                        </div>
+                        <div class="text-center italic">
+                            <label id="country_postcode_edit_customer"></label><br />
+                        </div>
+                        <div class="text-center italic">
+                            <label id="postcode_popup_edit_customer"><span> ?</span></label><br />
+                        </div>
+
+
+
+
+
+                        <div class="empty-height"></div>
+
+
+
+
+
+
+                        <div class="col-md-12">
+
+
+                            <div class="col-md-6">
+                                <input type="button" onclick="Add_Postcode_Edit_Customer()" value="Add" class="btn btn-success btn-mini center-block width-95">
+                            </div>
+
+
+                            <script>
+
+
+
+                            </script>
+
+
+                            <div class="col-md-6">
+                                <input type="button" value="Cancel" class="btn btn-primary btn-mini center-block width-95" onclick="close_customer_postcode()">
+                            </div>
+
+
+
+
+                        </div>
+
+
+                        <div class="col-md-12">
+                            <div class="col-md-3"></div>
+
+
+                            <div class="col-md-3"></div>
+
+
+
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="modal-footer"></div>
+            <div class=""></div>
+
+        </div>
+    </div>
+</div>
+
+@*----------------------------POP UP for EDIT CUSTOMER POSTCODE CONFIRMATION--------------------------------*@
+
+
+@*----------------------------POP UP for EDIT CUSTOMER POSTCODE HOUSE NUMBER--------------------------------*@
+
+<div style="z-index:99999" class="modal fade" id="Postcode_House_Number_Edit" tabindex="-1" role="dialog" aria-hidden="false">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content modal-style-custom">
+
+            <div class="title col-md-12">
+                <span>Prompt</span>
+                <img src="~/img/images/c3.png" class="close mr--13 pull-right" onclick="close_customer_postcode()"/>
+            </div>
+
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="x_panel">
+
+                    <div id="" class="black-color">
+                        <div class="empty-height"></div>
+                        <div class="empty-height"></div>
+
+                        <div class="text-center italic">
+                            <label id="">Please Enter House Number</label>
+
+                            <input type="text" id="house_number_postcode_edit_customer" />
+
+                        </div>
+
+                        <div class="empty-height"></div>
+
+
+
+
+
+
+
+
+                        <div class="empty-height"></div>
+                        <div class="empty-height"></div>
+
+                        <div class="col-md-12">
+
+                            <div class="col-md-3"></div>
+
+                            <div class="col-md-6">
+                                <input type="button" onclick="House_no_Postcode_Edit_Supplier()" value="Add" class="btn btn-success btn-mini center-block width-95">
+                            </div>
+
+
+
+
+                            <div class="col-md-3"></div>
+                            @*<input type="button" value="Cancel" class="btn btn-primary btn-mini center-block width-95" onclick="close_modal()">*@
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="modal-footer"></div>
+            <div class=""></div>
+
+        </div>
+    </div>
+</div>
+
+
+@*----------------------------POP UP for EDIT CUSTOMER POSTCODE HOUSE NUMBER--------------------------------*@
